--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -48,14 +48,14 @@ body {
 /* ********************* */
 /*	.people-of-interest
 /* ********************* */
-.people-of-interest {	
+.people-of-interest {
 	.people-of-interest-inner {
 		display: flex;
 		flex-direction: row;
-		flex-wrap: wrap;		
+		flex-wrap: wrap;
 		align-content: center;
 		justify-content: center;
-		text-align: center;		
+		text-align: center;
 		@include breakpoint(670){
 			justify-content: space-between;
 		}
@@ -71,7 +71,7 @@ body {
 .person {
     display: flex;
     flex-direction: row;
-    align-items: center;	
+    align-items: center;
 	margin-top: 20px;
 	background: $palette-midblue;
 	cursor: pointer;
@@ -89,10 +89,13 @@ body {
 			font-size: 1.3rem;
 			letter-spacing: 1px;
 		}
-		span { 
+		span {
 			color: $palette-lightblue;
 		}
 	}
+}
+.person-dialog {
+	@extend .person;
 }
 
 /* ********************* */
@@ -133,4 +136,74 @@ body {
 		color: #fff;
 		z-index: 101;
 	}
+}
+
+/* ********************* */
+/*	.modal-bg
+/* ********************* */
+
+.modal-bg {
+  position: fixed;
+  font-family: Arial, Helvetica, sans-serif;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0);
+  z-index: 99999;
+  transition: all 0.5s ease-out;
+  transition-delay: 0.2s;
+  display: block;
+  pointer-events: none;
+}
+
+.modal-bg .dialog {
+  width: 400px;
+  position: relative;
+  top: -1000px;
+  margin: 10% auto;
+  padding: 5px 20px 13px 20px;
+  border-radius: 10px;
+  background: #fff;
+  background: -moz-linear-gradient(#fff, #ccc);
+  background: -webkit-linear-gradient(#fff, #ccc);
+  background: -o-linear-gradient(#fff, #ccc);
+  box-shadow: 0 0 10px #000;
+}
+.modal-bg .dialog .ie7 {
+  filter: progid:DXImageTransform.Microsoft.Shadow(color='#000', Direction=135, Strength=3);
+}
+
+.modal-bg.open{
+  display: block;
+  pointer-events: auto;
+  background: rgba(4, 10, 30, 0.8);
+  transition: all 0.5s ease-out;
+}
+
+.modal-bg.open .dialog {
+  top: -20px;
+  transition: all 0.4s ease-out;
+  transition-delay: 0.4s;
+}
+.close {
+  background: #606061;
+  color: #FFFFFF;
+  line-height: 25px;
+  position: absolute;
+  right: -12px;
+  text-align: center;
+  top: -10px;
+  width: 24px;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 12px;
+  box-shadow: 0 0 10px #000;
+  transition: all 0.5s ease-out;
+  transition-delay: 0.2s;
+}
+
+.close:hover {
+  background: #00d9ff;
+  transition: all 0.5s ease-out;
 }
