--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,209 +1,206 @@
 // Reset scss
 @import '_reset';
-
 // imports
 @import '_mixins';
 @import '_fonts';
-
 // scss variables
-
 // colors
 $palette-darkblue: #0f1d2e;
-$palette-darkblue-opaque: rgba(3,6,9, 0.9);
+$palette-darkblue-opaque: rgba(3, 6, 9, 0.9);
 $palette-midblue: #162941;
 $palette-lightblue: #39649f;
 $palette-pink: #ffbead;
-
-
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-	background: $palette-darkblue;
+    background: $palette-darkblue;
 }
+
 
 /* ********************* */
 /*	.logo
 /* ********************* */
+
 .logo {
-	display: block;
-	width: 260px;
-	height: 45px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	background: url('../images/logo.png') no-repeat center center;
-	background-size: 100%;
+    display: block;
+    width: 260px;
+    height: 45px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background: url('../images/logo.png') no-repeat center center;
+    background-size: 100%;
 }
+
 
 /* ********************* */
 /*	.log-app-wrapper
 /* ********************* */
+
 .log-app-wrapper {
-	width: 100%;
-	max-width: 830px;
-	margin:0 auto;
+    width: 100%;
+    max-width: 830px;
+    margin: 0 auto;
+    padding: 20px;
 }
+
 
 /* ********************* */
 /*	.people-of-interest
 /* ********************* */
+
 .people-of-interest {
-	.people-of-interest-inner {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		align-content: center;
+    .people-of-interest-inner {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-content: center;
 		justify-content: center;
-		text-align: center;
-		@include breakpoint(670){
+        @include breakpoint(810) {
 			justify-content: space-between;
-		}
-	}
-	h2 {
-		color: $palette-lightblue;
-	}
+        }
+    }
+    h2 {
+        color: $palette-lightblue;
+    }
 }
+
 
 /* ********************* */
 /*	.person
 /* ********************* */
+
 .person {
     display: flex;
     flex-direction: row;
     align-items: center;
-	margin-top: 20px;
-	background: $palette-midblue;
-	cursor: pointer;
-	width: 100%;
-	max-width: 406px;
-	img{
-		width: 33.3%;
-	}
-	div{
-		width: 100%;
-		text-align: center;
-		p {
-			color: $palette-pink;
-			font-family: 'robotoblack';
-			font-size: 1.3rem;
-			letter-spacing: 1px;
-		}
-		span {
-			color: $palette-lightblue;
-		}
-	}
+    margin-top: 20px;
+    background: $palette-midblue;
+    cursor: pointer;
+    width: 100%;
+    max-width: 386px;
+    img {
+        width: 33.3%;
+    }
+    div {
+        width: 100%;
+        text-align: center;
+        p {
+            color: $palette-pink;
+            font-family: 'robotoblack';
+            font-size: 1.3rem;
+            letter-spacing: 1px;
+        }
+        span {
+            color: $palette-lightblue;
+        }
+    }
 }
+
 .person-dialog {
-	@extend .person;
+    @extend .person;
+    background: lighten($palette-midblue, 5%);
 }
+
 
 /* ********************* */
 /*	.profile-box
 /* ********************* */
+
 .profile-box {
-	display: none;
-	flex-direction: row;
-	align-items: center;
-	position: fixed;
-	z-index: 100;
-	left: 0;
-	top: 0;
-	padding: 20px;
-	width: 100%;
-	height: 100%;
-	background: $palette-darkblue-opaque;
-	&.show-me {
-		display: flex;
-	}
-	.profile-log {
-		display: none;
-		padding: 20px;
-		max-width: 650px;
-		margin: 0 auto;
-		border-radius: 10px;
-		background: darken($palette-midblue, 5%);
-		&.show-me {
-			display: block;
-		}
-	}
-	#closeProfileBox {
-		display: block;
-		position: absolute;
-		top: 20px;
-		right: 20px;
-		cursor: pointer;
-		color: #fff;
-		z-index: 101;
-	}
+    display: none;
+    flex-direction: row;
+    align-items: center;
+    position: fixed;
+    z-index: 100;
+    left: 0;
+    top: 0;
+    padding: 20px;
+    width: 100%;
+    height: 100%;
+    background: $palette-darkblue-opaque;
+    &.show-me {
+        display: flex;
+    }
+    .profile-log {
+        display: none;
+        padding: 20px;
+        max-width: 650px;
+        margin: 0 auto;
+        border-radius: 10px;
+        background: darken($palette-midblue, 5%);
+        &.show-me {
+            display: block;
+        }
+    }
+    #closeProfileBox {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        cursor: pointer;
+        color: #fff;
+        z-index: 101;
+    }
 }
+
 
 /* ********************* */
 /*	.modal-bg
 /* ********************* */
 
 .modal-bg {
-  position: fixed;
-  font-family: Arial, Helvetica, sans-serif;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background: rgba(0, 0, 0, 0);
-  z-index: 99999;
-  transition: all 0.5s ease-out;
-  transition-delay: 0.2s;
-  display: block;
-  pointer-events: none;
-}
-
-.modal-bg .dialog {
-  width: 400px;
-  position: relative;
-  top: -1000px;
-  margin: 10% auto;
-  padding: 5px 20px 13px 20px;
-  border-radius: 10px;
-  background: #fff;
-  background: -moz-linear-gradient(#fff, #ccc);
-  background: -webkit-linear-gradient(#fff, #ccc);
-  background: -o-linear-gradient(#fff, #ccc);
-  box-shadow: 0 0 10px #000;
-}
-.modal-bg .dialog .ie7 {
-  filter: progid:DXImageTransform.Microsoft.Shadow(color='#000', Direction=135, Strength=3);
-}
-
-.modal-bg.open{
-  display: block;
-  pointer-events: auto;
-  background: rgba(4, 10, 30, 0.8);
-  transition: all 0.5s ease-out;
-}
-
-.modal-bg.open .dialog {
-  top: -20px;
-  transition: all 0.4s ease-out;
-  transition-delay: 0.4s;
-}
-.close {
-  background: #606061;
-  color: #FFFFFF;
-  line-height: 25px;
-  position: absolute;
-  right: -12px;
-  text-align: center;
-  top: -10px;
-  width: 24px;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 12px;
-  box-shadow: 0 0 10px #000;
-  transition: all 0.5s ease-out;
-  transition-delay: 0.2s;
-}
-
-.close:hover {
-  background: #00d9ff;
-  transition: all 0.5s ease-out;
+    position: fixed;
+    font-family: Arial, Helvetica, sans-serif;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background: rgba(0, 0, 0, 0);
+    z-index: 99999;
+    transition: all 0.5s ease-out;
+    transition-delay: 0.2s;
+    display: block;
+    pointer-events: none;
+    .close {
+        background: #606061;
+        color: #FFFFFF;
+        line-height: 25px;
+        position: absolute;
+        right: -12px;
+        text-align: center;
+        top: -10px;
+        width: 24px;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 12px;
+        box-shadow: 0 0 10px #000;
+        transition: all 0.5s ease-out;
+        transition-delay: 0.2s;
+    }
+    .dialog {
+        width: 90%;
+        position: relative;
+        top: -1000px;
+        margin: 10% auto;
+        padding: 5px 20px 13px 20px;
+        border-radius: 10px;
+        background: $palette-midblue;
+    }
+    &.open {
+        display: block;
+        pointer-events: auto;
+        background: rgba(4, 10, 30, 0.8);
+        transition: all 0.5s ease-out;
+        .dialog {
+            top: -20px;
+            transition: all 0.4s ease-out;
+            transition-delay: 0.4s;
+        }
+        .close:hover {
+            background: #00d9ff;
+            transition: all 0.5s ease-out;
+        }
+    }
 }
