--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -27,10 +27,12 @@ body {
     display: block;
     width: 260px;
     height: 45px;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: 20px auto 20px auto;
     background: url('../images/logo.png') no-repeat center center;
     background-size: 100%;
+	@include breakpoint(810) {
+		margin-left: 0;
+	}
 }
 
 
@@ -51,6 +53,7 @@ body {
 /* ********************* */
 
 .people-of-interest {
+	text-align: center;
     .people-of-interest-inner {
         display: flex;
         flex-direction: row;
@@ -62,7 +65,15 @@ body {
         }
     }
     h2 {
+		width: 100%;
+		padding-bottom: 8px;
+		font-family: 'Roboto-Medium';
+		font-size: 1.4rem;
         color: $palette-lightblue;
+		border-bottom: 2px solid $palette-lightblue;
+		@include breakpoint(810) {
+			text-align: left;
+		}
     }
 }
 
@@ -81,18 +92,22 @@ body {
     width: 100%;
     max-width: 386px;
     img {
-        width: 33.3%;
+        width: 28.3%;
     }
     div {
         width: 100%;
-        text-align: center;
+		text-align: left;
+   		padding-left: 40px;
         p {
+			margin-bottom: 8px;
             color: $palette-pink;
-            font-family: 'robotoblack';
+            font-family: 'Roboto-Bold';
             font-size: 1.3rem;
             letter-spacing: 1px;
         }
         span {
+			font-family: 'Roboto-Medium';
+			font-size: 1.2rem;
             color: $palette-lightblue;
         }
     }
@@ -100,49 +115,9 @@ body {
 
 .person-dialog {
     @extend .person;
+	margin-top:0;
+	max-width: 100%;
     background: lighten($palette-midblue, 5%);
-}
-
-
-/* ********************* */
-/*	.profile-box
-/* ********************* */
-
-.profile-box {
-    display: none;
-    flex-direction: row;
-    align-items: center;
-    position: fixed;
-    z-index: 100;
-    left: 0;
-    top: 0;
-    padding: 20px;
-    width: 100%;
-    height: 100%;
-    background: $palette-darkblue-opaque;
-    &.show-me {
-        display: flex;
-    }
-    .profile-log {
-        display: none;
-        padding: 20px;
-        max-width: 650px;
-        margin: 0 auto;
-        border-radius: 10px;
-        background: darken($palette-midblue, 5%);
-        &.show-me {
-            display: block;
-        }
-    }
-    #closeProfileBox {
-        display: block;
-        position: absolute;
-        top: 20px;
-        right: 20px;
-        cursor: pointer;
-        color: #fff;
-        z-index: 101;
-    }
 }
 
 
@@ -164,43 +139,61 @@ body {
     display: block;
     pointer-events: none;
     .close {
-        background: #606061;
+		display: none;
+		font-family: 'Roboto-Light';
         color: #FFFFFF;
-        line-height: 25px;
         position: absolute;
-        right: -12px;
+        right: 20px;
+		top: 20px;
         text-align: center;
-        top: -10px;
-        width: 24px;
         text-decoration: none;
         font-weight: bold;
         border-radius: 12px;
-        box-shadow: 0 0 10px #000;
         transition: all 0.5s ease-out;
         transition-delay: 0.2s;
     }
     .dialog {
         width: 90%;
+		max-width: 560px;
         position: relative;
         top: -1000px;
-        margin: 10% auto;
-        padding: 5px 20px 13px 20px;
+        margin: 0 auto;
+        padding: 40px;
         border-radius: 10px;
         background: $palette-midblue;
     }
+	.dialog {
+		h3 {
+			font-family: 'Roboto-Regular';
+			margin-bottom: 20px;
+			margin-top: 20px;
+			padding-bottom: 10px;
+			font-size: 1.3rem;
+			color: $palette-lightblue;
+			border-bottom: 1px solid $palette-lightblue;
+		}
+		.logs {
+			p {
+				margin-bottom: 15px;
+				font-family: 'Roboto-Regular';
+				font-size: 1.1rem;
+				color: $palette-pink;
+			}
+		}
+	}
     &.open {
         display: block;
         pointer-events: auto;
-        background: rgba(4, 10, 30, 0.8);
+        background: rgba(0, 0, 0, 0.9);
         transition: all 0.5s ease-out;
+		.close{
+			display: block;
+		}
         .dialog {
-            top: -20px;
+            top: 50%;
+			transform: translateY(-50%);
             transition: all 0.4s ease-out;
             transition-delay: 0.4s;
-        }
-        .close:hover {
-            background: #00d9ff;
-            transition: all 0.5s ease-out;
         }
     }
 }
