--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -152,32 +152,41 @@ body {
         transition: all 0.5s ease-out;
         transition-delay: 0.2s;
     }
-    .dialog {
-        width: 90%;
+	.dialog {
+		width: 90%;
 		max-width: 560px;
-        position: relative;
+        position: absolute;
+		transform: translate(-50%, -50%);
         top: -1000px;
+		left: 50%;
         margin: 0 auto;
-        padding: 40px;
+        padding: 10px;
         border-radius: 10px;
         background: $palette-midblue;
-    }
-	.dialog {
+		@include breakpoint(810) {
+			padding:40px;
+		}
 		h3 {
-			font-family: 'Roboto-Regular';
+			font-family: 'Roboto';
 			margin-bottom: 20px;
 			margin-top: 20px;
 			padding-bottom: 10px;
-			font-size: 1.3rem;
+			font-size: 1rem;
 			color: $palette-lightblue;
 			border-bottom: 1px solid $palette-lightblue;
+			@include breakpoint(810) {
+				font-size: 1.3rem;
+			}
 		}
 		.logs {
 			p {
 				margin-bottom: 15px;
-				font-family: 'Roboto-Regular';
-				font-size: 1.1rem;
+				font-family: 'Roboto';
+				font-size: 0.7rem;
 				color: $palette-pink;
+				@include breakpoint(810) {
+					font-size: 1.1rem;
+				}
 			}
 		}
 	}
@@ -191,7 +200,6 @@ body {
 		}
         .dialog {
             top: 50%;
-			transform: translateY(-50%);
             transition: all 0.4s ease-out;
             transition-delay: 0.4s;
         }
