--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -15,7 +15,15 @@ $palette-pink: #ffbead;
 }
 
 body {
-    background: $palette-darkblue;
+	background-image: url('../images/Background_pattern.png');
+	background-repeat:repeat-y;
+	background-position: left center;
+	background-size: 40px;
+	height: 100%;
+    background-color: $palette-darkblue;
+	@include breakpoint(810) {
+		background-size: 70px;
+	}
 }
 
 
